// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addServerEpic actions dispatched on API response with error 1`] = `
Array [
  Object {
    "type": "addServer/FORM_SUBMITTED",
    "values": Object {
      "name": "name",
      "port": 3000,
      "secure": false,
      "type": "http",
    },
  },
  Object {
    "notification": Object {
      "text": "error message",
      "type": "error",
    },
    "type": "notifications/ADD",
  },
]
`;

exports[`addServerEpic actions dispatched on API response without error 1`] = `
Array [
  Object {
    "type": "addServer/FORM_SUBMITTED",
    "values": Object {
      "name": "name",
      "port": 3000,
      "secure": false,
      "type": "http",
    },
  },
  Object {
    "notification": Object {
      "text": "Server added",
      "type": "success",
    },
    "type": "notifications/ADD",
  },
  Object {
    "type": "modals/CLOSE",
  },
  Object {
    "id": "server-id",
    "server": "server-id",
    "type": "scenarios/ADD",
  },
  Object {
    "id": "server-id",
    "params": Object {
      "id": "server-id",
      "name": "name",
      "port": 3000,
      "scenario": "server-id",
      "secure": false,
      "type": "http",
    },
    "type": "servers/ADD",
  },
]
`;
